Implemented get categories
